[package]
name = "yui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tui"]
tui = ["ansi_term", "term_size", "textwrap"]

[dependencies]
glam = "0.29"
log = { version = "0.4", features = ["std"] }

ansi_term = { version = "0.12", optional = true }
term_size = { version = "1.0.0-beta1", optional = true }
textwrap = { version = "0.16", optional = true }
